# pds-tsp

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  main.cpp  mediator.h  multi_thread_strategies.cpp  single_thread_strategies.cpp  utils.cpp
EitherMonad/: Makefile  README.md  TODO  either_example.cpp  either_main.cpp
EitherMonad/include/: Either.h  EitherMonad.h  Error.h  MonadUtils.h
cmake/: Doxygen.cmake  Postsets.cmake  Presets.cmake
data_assets/: ulysses10.txt  ulysses11.txt  ulysses12.txt  ulysses13.txt  ulysses4.txt  ulysses5.txt  ulysses6.txt  ulysses7.txt  ulysses8.txt  ulysses9.txt
